--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     },
     "require-dev": {
         "kahlan/kahlan": "^3.1",
-        "phalcon/ide-stubs": "^3.2"
+        "phalcon/ide-stubs": "^3.2",
+        "league/factory-muffin": "^3.0",
+        "league/factory-muffin-faker": "^2.0"
     },
     "license": "MIT",
     "authors": [
@@ -20,7 +22,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Phalcon\\Paginator\\Adapter\\": "src/"
+            "Phalcon\\Paginator\\Adapter\\": "src/",
+            "CollectionModel\\": "spec/factories/"
         }
     }
 }
