--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "kahlan/kahlan": "^3.1",
         "phalcon/ide-stubs": "^3.2",
         "league/factory-muffin": "^3.0",
-        "league/factory-muffin-faker": "^2.0"
+        "league/factory-muffin-faker": "^2.0",
+        "squizlabs/php_codesniffer": "^3.0"
     },
     "license": "MIT",
     "authors": [
