--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ php:
 before_install:
   - echo "Running BeforeInstall"
   - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-  - bin/install-phalcon.sh 3.0.x
+  - bin/install-phalcon.sh 3.2.0
 
 # Commands to be run before your environment runs.
 before_script:
