--- a/.travis.yml
+++ b/.travis.yml
@@ -3,28 +3,24 @@ language: php
 
 # Versions of PHP you want your project run with.
 php:
-  - 5.4
-  - 5.5
   - 5.6
-  - 7.0
   - 7.1
   - hhvm
 
 before_install:
   - echo "Running BeforeInstall"
-  - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-  - bin/install-phalcon.sh 3.2.0
+  - docker-compose up -d
 
 # Commands to be run before your environment runs.
 before_script:
   - echo "Running BeforeScript"
   - composer self-update
-  - composer install --prefer-source --no-interaction --dev
+  - composer install --prefer-source --no-interaction
 
 # Commands you want to run that will verify your build.
 script:
   - echo "RunningScript"
-  - bin/kahlan --cc=true --reporter=verbose
+  - docker exec test-fpm bin/kahlan --cc=true --reporter=verbose
 
 after_success:
   - echo "Running AfterSuccess"
@@ -33,9 +29,6 @@ after_success:
 # fast_finish: If your build fails do not continue trying to build, just stop.
 matrix:
   allow_failures:
-    - php: 5.4
-    - php: 5.5
-    - php: 7.0
     - php: 7.1
     - php: hhvm
   fast_finish: true
@@ -49,7 +42,6 @@ cache:
   directories:
     - vendor
     - $HOME/.composer/cache
-    - $HOME/cphalcon
 
 services:
-  - mongodb
+  - docker
