updated docker image to lateset version to include composer, git and xdebug

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   fpm:
     container_name: "test-fpm"
-    image: angelxmoreno/php-fpm-alpine
+    image: angelxmoreno/php-fpm-alpine:latest
     volumes:
      - .:/var/www/html
     links:
