--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ after_success:
 
 after_script:
   - echo "Running AfterScript"
-  - php ./bin/codacycoverage clover clover.xml
+  - php ./bin/codacycoverage clover clover.xml -vvv
 
 # allow_failures: Allow this build to fail under the specified environments.
 # fast_finish: If your build fails do not continue trying to build, just stop.
